--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="event_date">Date: </string>
     <string name="event_time">Time: </string>
     <string name="add_event_btn">Add Event</string>
+    <string name="event_unit">Units</string>
+    <string name="event_quantity">Quantity</string>
+    <string name="add_event_details_btn">Add Event Details</string>
 </resources>
