--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="event_unit">Units</string>
     <string name="event_quantity">Quantity</string>
     <string name="add_event_details_btn">Add Event Details</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
