--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="add_event_details_btn">Add Event Details</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Event name</string>
 </resources>
