--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="add_events_details">Add Events Details</string>
     <string name="edit_event">Edit Event</string>
     <string name="delete_event">Delete Event</string>
+    <string name="update_event_details">Update Details</string>
 </resources>
