:memo: Added readme.txt and Student names on main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="delete_event">Delete Event</string>
     <string name="update_event_details">Update Details</string>
     <string name="update_event">Update Event</string>
+    <string name="student_names">Haley Booker and Tim Bruecker</string>
 </resources>
